# lazycogs

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  VISION.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: benchmarks.yml  ci.yml  docs.yml
api/: index.html
api/mosaic/: index.html
api/open/: index.html
api/utils/: index.html
architecture/: index.html
demo/: index.html
dev-docs/specs/: progress-observer-api.md  rust-warp-integration.md
docs/: api.md  demo.ipynb  hls.ipynb  index.md  lazycogs-odc-stac.ipynb
docs/api/: mosaic.md  open.md  utils.md
docs/guides/: chunking.md  cloud-storage.md
docs/includes/: dataarray_repr.html
docs/notebooks/: cmr-lpcloud-fix-assets.ipynb  hls-https.ipynb  hls-s3.ipynb
docs/stylesheets/: extra.css
docs/talks/: lightning-talk.md
guides/cloud-storage/: index.html
hls/: index.html
lazycogs-odc-stac/: index.html
notebooks/cmr-lpcloud-fix-assets/: index.html
notebooks/hls-https/: index.html
notebooks/hls-s3/: index.html
scripts/: format_benchmark_comparison.py  prepare_benchmark_data.py
search/: search_index.json
slides/lightning-talk/: index.qmd  styles.css
src/lazycogs/: __init__.py  _backend.py  _chunk_reader.py  _core.py  _executor.py  _explain.py  _reproject.py  _rust_warp.py  _store.py  _warp.py
src/stac_cog_xarray/: __init__.py  _backend.py  _chunk_reader.py  _core.py
stylesheets/: extra.css
tests/: _executor_test_utils.py  conftest.py  integration_monthly_test.py  integration_test.py  test_backend.py  test_chunk_reader.py  test_core.py  test_explain.py  test_format_benchmark_comparison.py  test_grid.py  test_integration.py  test_mosaic_methods.py  test_prepare_benchmark_data.py  test_rasterio_parity.py  test_reproject.py  test_store.py  test_temporal.py
tests/benchmarks/: _profiling.py  bench_duckdb_share.py  bench_pipeline.py  conftest.py
